[tool.poetry]
name = "fancifier"
version = "0.1.0"
description = ""
authors = ["petelouise <programmer@petelouises.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pillow = "^10.3.0"
pyyaml = "^6.0.1"
rich = "^13.7.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
aider-chat = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
